--- a/public_html/entidades/css/style.css
+++ b/public_html/entidades/css/style.css
@@ -241,16 +241,16 @@ body{
 
 /*Autocompletar div para el buscador de entidades*/
 .autocomplete-items {
-    position: relative;
-    /*position: absolute;*/
+    position: absolute;
+    /*position: relative;*/
     border: 1px solid #d4d4d4;    
     border-top: none;
     border-right: none;
     z-index: 99;    
-    /*margin-top: 40px;*/
+    margin-top: 40px;
     left: 0.5%;
     right: 0;
-    /*width: 12.6%;*/
+    width: 12.6%;
     overflow-x: auto;
     max-height: 85%;
     opacity: 1;
