correcion en el timeline drop

--- a/public_html/entidades/css/style.css
+++ b/public_html/entidades/css/style.css
@@ -7,6 +7,10 @@ body{
     height: 3rem !important;
 }
 
+.vis-itemset{
+    height: 250px !important;
+}
+
 /*grid layout*/
 .wrapper {
     display: grid;
