--- a/public_html/entidades/css/style.css
+++ b/public_html/entidades/css/style.css
@@ -682,6 +682,7 @@ body {
   white-space: nowrap; /* Don't forget this one */
   text-overflow: ellipsis;
   color: black;
+  font-size: 11px;
 }
 
 .textZone {
